# PotCode

./: .gitmodules  CMakeLists.txt  PotCode.c  PotCode.cpp  README.md  README.txt  configure.sh  run.sh
model-parameters/: anomaly_clusters.h  anomaly_types.h  dsp_blocks.h  model_metadata.h  model_variables.h
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
